--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "material-start",
   "private": true,
   "version": "0.0.2",
+  "engines": {
+    "node": "0.10.x"
+  },
   "description": "A starter project for AngularJS Material",
   "repository": "https://github.com/angular/material-start",
   "license": "MIT",
   "devDependencies": {
-    "karma": "~0.10",
-    "protractor": "^2.0.0",
-    "http-server": "^0.6.1",
     "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
+    "connect-modrewrite": "^0.8.1",
+    "http-server": "^0.6.1",
+    "karma": "~0.10",
     "karma-junit-reporter": "^0.2.2",
-    "selenium-webdriver": "^2.45.1"
+    "protractor": "^2.0.0",
+    "selenium-webdriver": "^2.45.1",
+    "shelljs": "^0.2.6"
   },
   "scripts": {
     "postinstall": "bower update",
