--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "postinstall": "bower update",
     "prestart": "npm update",
     "test": "./node_modules/.bin/protractor ./e2e/protractor.conf.js"
+  },
+  "dependencies": {
+    "bower": "^1.3.1"
   }
 }
